# devops

./: .envrc  .gitignore  .npmrc  .prettierignore  README.md  bun.lockb  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.claude/: settings.local.json
docs/: Architecture.md  (+6 more)
src/target-templates/: README.md  devops  devopspy  pyproject.toml
src/target-templates/.devops/: env.example.yaml
src/target-templates/.devops/config/: constants.yaml  images.yaml
src/target-templates/.devops/docker-entrypoints/: node-run.sh
src/target-templates/.devops/docker-images/: node-services.Dockerfile  node.Dockerfile  python-services.Dockerfile
src/target-templates/.devops/docker-images/common/: docker-common.sh
src/target-templates/.devops/docker-images/node-services/: node-exec.sh  node-run.sh
src/target-templates/.devops/infra/hetzner/: harbor-values.yaml  hcloud-config.yaml  retain-storage-class.yaml
src/target-templates/.devops/manifests/: _index.yaml  cron-jobs.yaml.hb  deployment-debug.yaml.hb  deployment-process.yaml.hb  deployment-web.yaml.hb  prefect.yaml.hb
src/target-templates/.devops/milvus/staging/: milvus-values.yaml
src/target-templates/.devops/prefect/production/: prefect-values.yaml
src/target-templates/.devops/prefect/staging/: prefect-values.yaml
src/target-templates/.github/actions/build-image@v1/: action.yaml
src/target-templates/.github/actions/connect-to-digital-ocean@v1/: action.yaml
src/target-templates/.github/workflows/: k8s-build.yaml
src/target-templates/applications/example/: index.ts  package.json
src/target-templates/applications/example-data-pipeline/: pyproject.toml
src/target-templates/applications/example-python/: pyproject.toml
src/target-templates/applications/jobs/: README.md  package.json
src/target-templates/cluster-resource-options/: README.md
src/target-templates/cluster-resource-options/dns-test/: dns-test.yaml
src/target-templates/cluster-resource-options/postgres/: daily-operator-restart.yaml
src/target-templates/config/: .env.development  .env.global  .env.test
src/target-templates/db/: env.yaml  package.json  pyproject.toml
src/target-templates/db/db/: scripts.py
src/target-templates/infra-variants/: README.md
src/target-templates/lang-variants-common/: README.md
src/target-templates/lang-variants-common/python/: .gitignore  pyproject.toml
src/target-templates/lang-variants-common/typescript/: .envrc  .gitignore  devops
src/target-templates/lang-variants-prisma/: README.md
src/target-templates/libs/example-node-lib/: index.ts
src/target-templates/libs/example-python-lib/: pyproject.toml
(+250 files in other folders)
