[project]
name = "example-python"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.12"
dependencies = ["example-python-lib", "fastapi[standard]"]

[tool.devops.scripts]
dev = "python -c 'from src.example_python.scripts import dev; dev()'"
start = "python -c 'from src.example_python.scripts import start; start()'"

[tool.uv.sources]
example-python-lib = { workspace = true }


[tool.devops.deployment]
template = "external-service"
service_name = "example-python"
port = 3002
